# mmvm

./: .gitignore  Cargo.toml  README.md  run.sh
src/: lib.rs  main.rs
src/cli/: args.rs
src/disassembler/: addressing.rs  direction.rs  instruction.rs  mod.rs  numerical.rs  register.rs  test.rs
src/disassembler/addressing/: addressing.rs  mod.rs  register.rs
src/disassembler/data/: address.rs  displacement.rs  ic.rs  immediate.rs  index.rs  mod.rs  port.rs  type.rs
src/interpreter/: execution.rs  hardware.rs  mod.rs  systemcall.rs  utils.rs
src/mmvm/: addressing.rs  instruction.rs  mnemonic.rs  mod.rs  numerical.rs  register.rs
src/utils/: file_reader.rs  header.rs  mod.rs
testcases/: a.out.h
